mutants.out/log/crates__sandbox-registry__src__lib.rs_line_303_col_9.log

*** crates/sandbox-registry/src/lib.rs:303:9: replace StoredSandboxDefinition::from_definition -> Self with Default::default()

*** mutation diff:
--- crates/sandbox-registry/src/lib.rs
+++ replace StoredSandboxDefinition::from_definition -> Self with Default::default()
@@ -295,20 +295,17 @@
 #[derive(Debug, Clone, Serialize, Deserialize)]
 struct StoredSandboxDefinition {
     id: String,
     policy: StoredSandboxPolicy,
 }
 
 impl StoredSandboxDefinition {
     fn from_definition(definition: &SandboxDefinition) -> Self {
-        Self {
-            id: definition.id().as_str().to_string(),
-            policy: StoredSandboxPolicy::from_policy(definition.policy()),
-        }
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     fn into_definition(self) -> Result<SandboxDefinition, SandboxStoreError> {
         SandboxDefinition::new(self.id, self.policy.into_policy())
             .map_err(SandboxStoreError::Registry)
     }
 }
 


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=sandbox-registry@0.1.0
       Fresh unicode-ident v1.0.24
       Fresh equivalent v1.0.2
       Fresh hashbrown v0.17.0
       Fresh winnow v0.7.15
       Fresh toml_write v0.1.2
       Fresh sandbox v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/sandbox)
       Fresh proc-macro2 v1.0.106
       Fresh indexmap v2.14.0
       Fresh quote v1.0.45
       Fresh serde_core v1.0.228
       Fresh syn v2.0.117
       Fresh serde_derive v1.0.228
       Fresh serde v1.0.228
       Fresh toml_datetime v0.6.11
       Fresh serde_spanned v0.6.9
       Fresh toml_edit v0.22.27
       Fresh toml v0.8.23
       Dirty sandbox-registry v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/sandbox-registry): the file `crates/sandbox-registry/src/lib.rs` has changed (1778057813.444795828s, 3s after last build at 1778057810.427956275s)
   Compiling sandbox-registry v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/sandbox-registry)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox_registry --edition=2024 crates/sandbox-registry/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e78caf16c93c3591 -C extra-filename=-4e164e4f942933fe --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern sandbox=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libsandbox-3854b11f8daf2006.rlib --extern serde=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libserde-9d56c8f99faab1ce.rlib --extern toml=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libtoml-3f2b5ed09ad10256.rlib`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox_registry --edition=2024 crates/sandbox-registry/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a255c3acdb305d11 -C extra-filename=-b98dc53fc887799a --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern sandbox=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libsandbox-3854b11f8daf2006.rmeta --extern serde=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libserde-9d56c8f99faab1ce.rmeta --extern toml=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libtoml-3f2b5ed09ad10256.rmeta`
error[E0277]: the trait bound `StoredSandboxDefinition: Default` is not satisfied
   --> crates/sandbox-registry/src/lib.rs:303:9
    |
303 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `StoredSandboxDefinition`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `sandbox-registry` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox_registry --edition=2024 crates/sandbox-registry/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e78caf16c93c3591 -C extra-filename=-4e164e4f942933fe --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern sandbox=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libsandbox-3854b11f8daf2006.rlib --extern serde=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libserde-9d56c8f99faab1ce.rlib --extern toml=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libtoml-3f2b5ed09ad10256.rlib` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `sandbox-registry` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox_registry --edition=2024 crates/sandbox-registry/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a255c3acdb305d11 -C extra-filename=-b98dc53fc887799a --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern sandbox=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libsandbox-3854b11f8daf2006.rmeta --extern serde=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libserde-9d56c8f99faab1ce.rmeta --extern toml=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libtoml-3f2b5ed09ad10256.rmeta` (exit status: 1)

*** result: Failure(101)
